<resources>
    <string name="app_name">Android JetPack Navigation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_fragment">First Fragment</string>
    <string name="second_fragment">Second Fragment</string>
    <string name="third_fragment">Third Fragment</string>
    <string name="fourth_fragment">Fourth Fragment</string>

    <string name="moveforward">Move Forward</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="start">Move to Start</string>

</resources>